<resources>
    <string name="app_name">Analytica</string>
    <string name="title_OneVariable">One Variable</string>
    <string name="title_home">Home</string>
    <string name="title_Graph">Graph</string>
    <string name="title_SystemofEqu">System of Equations</string>
    <string name="title_Interpolation">Interpolation</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Incremental Search</string>
    <string name="tab_text_2">Bisection</string>
    <string name="tab_text_3">False Position</string>
    <string name="tab_text_4">Fixed Point</string>
    <string name="tab_text_5">Newton</string>
    <string name="tab_text_6">Secant</string>
    <string name="tab_text_7">Multiple Roots</string>
    <string name="tab_text_s1">Simple Gaussian Elimination</string>
    <string name="tab_text_s2">Simple Gaussian Partial Pivoting</string>
    <string name="tab_text_s3">Simple Gaussian Total Pivoting</string>
    <string name="tab_text_s4">LU Partial Pivoting</string>
    <string name="tab_text_s5">LU Simple Gaussian</string>
    <string name="tab_text_s6">Direct Factorization</string>
    <string name="tab_text_s7">Vandermonde</string>
    <string name="tab_text_s8">Jacobi</string>
    <string name="tab_text_s9">Gauss Seidel</string>
    <string name="tab_text_s10">SOR Gauss Seidel</string>
    <string name="tab_text_i1">Divided Differences</string>
    <string name="tab_text_i2">Lagrange</string>
    <string name="tab_text_i3">Linear Spline</string>
    <string name="tab_text_i4">Quadratic Spline</string>
    <string name="tab_text_i5">Cubic Spline</string>
    <string name="action_settings">Help</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="Analytica">
        <a href="https://sites.google.com/site/analisisnumerico20182aamw/home">Analytica</a>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string-array name="mese">
        <item>sin(x)</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
    </string-array>
</resources>
